# IdiomSolitaire

./: .gitignore  Cargo.toml  Readme.md  index-689a536610e9d40b.js  index-aca80188655cd023.js  index.html  main-a546d50bc146fc03.css  main-b0138d313c221ca6.css  package.json  tsconfig.json
.github/workflows/: ghpages.yml
database/: Build CSV.m  Fix CSV.m  database-remove.csv  database-replace.csv
projects/database/: Build CSV.m  Fix CSV.m  Readme.md  database-3char.csv  database-remove.csv  database-replace.csv
projects/idiom-solitaire-core/: Cargo.toml
projects/idiom-solitaire-core/src/: errors.rs  lib.rs
projects/idiom-solitaire-core/src/dictionary/: idiom.rs  mod.rs
projects/idiom-solitaire-core/src/solver/: mod.rs
projects/idiom-solitaire-core/src/theme/: mod.rs
projects/idiom-solitaire-core/tests/: main.rs
projects/idiom-solitaire-web/: Cargo.toml  Readme.md  Trunk.toml  index.html
projects/idiom-solitaire-web/assets/: main.scss
projects/idiom-solitaire-web/src/: form.rs  main.rs
projects/solitaire-killer-ts/: package.json  tsconfig.json
projects/solitaire-killer-ts/source/: index.ts
projects/solitaire-killer-ts/source/data/: index.ts
source/data/: Killer.ts  SelfReference.ts  index.ts
typescript/source/: index.ts
typescript/source/data/: Killer.ts  SelfReference.ts  index.ts
