[package]
name = "idiom-solitaire"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/IdiomSolitaire"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
itertools = "0.9"
pinyin = "0.8"
csv = "1.1"
pathfinding = "2.0"
serde = {version = "1.0" , features = ["derive"]}
rand = {version = "0.7" , features = ["small_rng", "wasm-bindgen"]}

[dev-dependencies]

[features]
default = []
