[package]
name = "qr-art-web"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
repository = "https://github.com/GalAster/qr-art"
readme = "../../readme.md"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
image = "0.23"
qrcode-generator = "4.0"

[dev-dependencies]

[features]
default = []
