[package]
name = "idiom-solitaire-web"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
repository = "https://github.com/GalAster/IdiomSolitaire"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
yew = "0.17"
idiom-solitaire = {version = "0.1", path = "../idiom-solitaire-core"}
anyhow = "1.0"